# fast-api-scafold

./: .cz.toml  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt  ruff.toml
.husky/: commit-msg  pre-commit
.husky/commit-msg-scripts/: commit_lint.sh
.husky/pre-commit-scripts/: format.sh  freeze_deps.sh  lint.sh
data/postgres/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
data/postgres/base/5/: pg_internal.init
data/postgres/global/: 1260  pg_control  pg_internal.init
data/postgres/pg_stat/: pgstat.stat
migrations/: env.py
scripts/: build.sh
src/: main.py
src/domain/repositories/: user.py
src/domain/services/: user.py
src/infra/: database.py
src/models/: user.py
src/providers/domain/repositories/: __init__.py  user.py
src/providers/domain/services/: __init__.py  user.py
src/providers/infra/: __init__.py  database.py
src/routes/: routes.py
src/routes/handlers/: user_create.py  user_get.py
